--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
+    "@vercel/analytics": "^1.4.1",
     "concurrently": "^9.1.2",
     "framer-motion": "^11.18.0",
     "lenis": "^1.1.19",
