--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@chakra-ui/react": "^3.3.1",
-        "@emotion/react": "^11.14.0",
-        "@emotion/styled": "^11.14.0",
-        "@mui/material": "^6.3.1",
         "@vercel/analytics": "^1.4.1",
-        "concurrently": "^9.1.2",
         "framer-motion": "^11.18.0",
         "lenis": "^1.1.19",
         "lucide-react": "^0.471.1",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^7.1.1"
+        "react-markdown": "^9.0.3",
+        "react-router-dom": "^7.1.1",
+        "remark-gfm": "^4.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
