--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,9 @@
         "react-dom": "^18.3.1",
         "react-markdown": "^9.0.3",
         "react-router-dom": "^7.1.1",
+        "react-syntax-highlighter": "^15.6.1",
+        "rehype-raw": "^7.0.0",
+        "remark-breaks": "^4.0.0",
         "remark-gfm": "^4.0.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7"
