--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.0",
+        "html2canvas": "^1.4.1",
+        "html2pdf.js": "0.9.0",
+        "jspdf": "^2.5.2",
         "lenis": "^1.1.19",
         "lucide-react": "^0.471.2",
         "prop-types": "^15.8.1",
