--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "html2canvas": "^1.4.1",
         "html2pdf.js": "0.9.0",
         "jspdf": "^2.5.2",
+        "katex": "^0.16.21",
         "lenis": "^1.1.19",
         "lucide-react": "^0.471.2",
         "prop-types": "^15.8.1",
@@ -28,9 +29,11 @@
         "react-markdown": "^9.0.3",
         "react-router-dom": "^7.1.1",
         "react-syntax-highlighter": "^15.6.1",
+        "rehype-katex": "^7.0.1",
         "rehype-raw": "^7.0.0",
         "remark-breaks": "^4.0.0",
         "remark-gfm": "^4.0.0",
+        "remark-math": "^6.0.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7"
     },
