--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@auth0/auth0-react": "^2.3.0",
         "@radix-ui/react-dialog": "^1.1.5",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.1",
@@ -18,12 +19,14 @@
         "@radix-ui/react-slider": "^1.2.3",
         "@radix-ui/react-slot": "^1.1.1",
         "@vercel/analytics": "^1.4.1",
+        "axios": "^1.7.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.0",
         "html2canvas": "^1.4.1",
         "html2pdf.js": "0.9.0",
         "jspdf": "^2.5.2",
+        "jwt-decode": "^4.0.0",
         "katex": "^0.16.21",
         "lenis": "^1.1.19",
         "lucide-react": "^0.471.2",
@@ -31,8 +34,9 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-markdown": "^9.0.3",
-        "react-router-dom": "^7.1.1",
+        "react-router-dom": "^7.1.4",
         "react-syntax-highlighter": "^15.6.1",
+        "react-toastify": "^11.0.5",
         "rehype-katex": "^7.0.1",
         "rehype-raw": "^7.0.0",
         "remark-breaks": "^4.0.0",
