--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-helmet-async": "^2.0.5",
         "react-markdown": "^9.0.3",
         "react-router-dom": "^7.1.4",
         "react-syntax-highlighter": "^15.6.1",
