--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
         "@radix-ui/react-slot": "^1.1.2",
         "@vercel/analytics": "^1.4.1",
         "axios": "^1.7.9",
+        "bson-objectid": "^2.0.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.0",
@@ -31,6 +32,7 @@
         "katex": "^0.16.21",
         "lenis": "^1.1.19",
         "lucide-react": "^0.471.2",
+        "next-themes": "^0.4.4",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -44,6 +46,7 @@
         "remark-breaks": "^4.0.0",
         "remark-gfm": "^4.0.0",
         "remark-math": "^6.0.0",
+        "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7"
     },
