--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,21 @@
     "dependencies": {
         "@auth0/auth0-react": "^2.3.0",
         "@radix-ui/react-alert-dialog": "^1.1.6",
-        "@radix-ui/react-dialog": "^1.1.5",
+        "@radix-ui/react-avatar": "^1.1.3",
+        "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-radio-group": "^1.2.3",
         "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slider": "^1.2.3",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-switch": "^1.1.3",
+        "@radix-ui/react-tabs": "^1.1.3",
+        "@radix-ui/react-toggle": "^1.1.2",
+        "@radix-ui/react-toggle-group": "^1.1.2",
+        "@radix-ui/react-tooltip": "^1.1.8",
         "@vercel/analytics": "^1.4.1",
         "axios": "^1.7.9",
         "bson-objectid": "^2.0.4",
