--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@auth0/auth0-react": "^2.3.0",
+        "@fingerprintjs/fingerprintjs": "^4.6.1",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
