--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon src/index.js"
+        "dev": "NODE_ENV=development nodemon src/index.js",
+        "start": "NODE_ENV=production node src/index.js"
     },
     "keywords": [],
     "author": "Subhajit Gorai",
@@ -13,6 +14,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
+        "connect-mongo": "^5.1.0",
         "cookie-parser": "^1.4.7",
         "cookie-session": "^2.1.0",
         "cors": "^2.8.5",
