--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
         "bson-objectid": "^2.0.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "framer-motion": "^11.18.0",
         "html2canvas": "^1.4.1",
         "html2pdf.js": "0.9.0",
