added another route for secure post data, post media deletion model added

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "author": "Subhajit Gorai",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.8.4",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "connect-mongo": "^5.1.0",
@@ -21,10 +22,12 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-session": "^1.18.1",
+        "form-data": "^4.0.2",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.11.0",
         "morgan": "^1.10.0",
+        "multer": "1.4.5-lts.2",
         "node-cron": "^3.0.3",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
