--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@tanstack/react-query": "^5.74.4",
         "@vercel/analytics": "^1.4.1",
         "axios": "^1.7.9",
         "bson-objectid": "^2.0.4",
