--- a/client/package.json
+++ b/client/package.json
@@ -61,7 +61,8 @@
         "remark-math": "^6.0.0",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.1",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "ua-parser-js": "^2.0.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
