update: multiple changes and path update

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .DS_Store
 **/.DS_Store
 .ropeproject
+nextjs-dashboard
+
+
+secrets
+secret
+images/all
+
+opencanvas_app
+
+Binary-Search-Tree-Example*.png
