--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.6",
@@ -37,6 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^11.18.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "0.9.0",
@@ -45,11 +47,13 @@
     "katex": "^0.16.21",
     "lucide-react": "^0.471.2",
     "next-themes": "^0.4.4",
+    "parchment": "^3.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-markdown": "^9.0.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.4",
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.5",
@@ -61,7 +65,8 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "ua-parser-js": "^2.0.4"
+    "ua-parser-js": "^2.0.4",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
